# franka_calibration

./: .gitignore  CMakeLists.txt  README.md
data/closed_chain_calibration/debug/: 210401_1_iteration_info.txt  210401_2_iteration_info.txt  210401_2_midpoint_save.txt
data/closed_chain_calibration/input_data/: input_data_1.txt  input_data_2.txt
data/closed_chain_calibration/result/: offset_data_trial_1.txt
data/closed_chain_calibration/yaml/: closed_1.yaml  closed_2.yaml
data/fixed_calibration/debug/: panda_left_125_dh_info.txt  panda_left_125_iteration_info.txt
data/fixed_calibration/input_data/: fixed_right_1_data_2.txt  input_data_left_1.txt  input_data_left_1_sorted.txt  input_data_left_2.txt  input_data_left_2_sorted.txt  input_data_right_1.txt  left_q1_-075_-400.txt  left_q1_-500_000.txt  left_q2_-075_-400.txt  left_q2_-500_000.txt  right_q1_-075_400.txt  right_q1_-500_000.txt  right_q2_-075_400.txt  right_q2_-500_000.txt
data/fixed_calibration/result/: panda_left_lm_method_1_dh_output.txt
data/fixed_calibration/yaml/: fixed_left_1.yaml  fixed_left_old_data.yaml  fixed_left_old_data_svd.yaml  fixed_left_svd_1.yaml  fixed_right_1.yaml
include/: closed_chain_calibration.h  fixed_calibration.h
include/robot_model/: franka_panda_model.h
include/utils/: calibration_math.h
scripts/: closed_combine_test_data.py
src/: closed_chain_calibration.cpp  data_collector.cpp  fixed_calibration.cpp
src/robot_model/: franka_panda_model.cpp
src/utils/: calibration_math.cpp  test_codes.cpp
